# c-snake

./: .gitignore  CMakeLists.txt  README.md
src/: display.c  display.h  enums.h  food.c  food.h  game.c  game.h  globals.h  input.c  input.h  macros.h  main.c  snake.c  snake.h  terminal.c  terminal.h  types.h  vmath.c  vmath.h
